On branch main Changes to be committed: 	new file:   .vscode/launch.json 	new file:   .vscode/settings.json 	new file:   anime-social-platform/README.md 	modified:   anime-social-platform/backend/pom.xml 	new file:   anime-social-platform/backend/src/main/java/com/animesocial/platform/config/ElasticsearchConfig.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/config/SecurityConfig.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/config/WebConfig.java 	new file:   anime-social-platform/backend/src/main/java/com/animesocial/platform/config/WebMvcConfig.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/config/WebSocketConfig.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/config/WebSocketEventListener.java 	new file:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/AdminController.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/AuthController.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/EventController.java 	new file:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/FavoriteController.java 	new file:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/FileController.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/FriendshipController.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/MessageController.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/PostController.java 	modified:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/ResourceController.java 	new file:   anime-social-platform/backend/src/main/java/com/animesocial/platform/controller/Search